<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">



        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/baseline_lock_24"
            android:title="@string/privacy_policy"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/about_us"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/sign_out"/>
        </menu>

    </item>

</menu>