<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbkg">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:contentDescription="TODO"
        android:src="@mipmap/ic_detector_line_foreground"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/scan"
            android:padding="8dp"
            android:textColor="@color/appColor"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="35sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/exit"
            android:src="@mipmap/ic_detector_exit_foreground" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutUpload"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:src="@drawable/baseline_upload_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_a_image_for_scan"
            android:textColor="@color/appColor"
            android:layout_marginStart="30dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPicture"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_photo_camera_24_2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_picture_for_scan"
            android:textColor="@color/appColor"
            android:layout_marginStart="30dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>



</LinearLayout>