<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Profile Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/appColor"
            android:padding="10dp">

            <!-- Profile Icon -->
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_manage_accounts_24"
                android:layout_gravity="center"
                android:contentDescription="@string/profiles"
                android:paddingTop="25dp"/>

            <!-- Username -->
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>

            <!-- Profile Info (Height, Age, Status) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:paddingTop="25dp">

                <!-- Profile Details -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/height"
                        android:textColor="@android:color/white"
                        android:layout_marginEnd="16dp"/>
                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textColor="@android:color/white"
                        android:layout_marginEnd="16dp"/>
                    <TextView
                        android:id="@+id/age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textColor="@android:color/white"
                        android:layout_marginEnd="16dp"/>
                </LinearLayout>

                <!-- Status and Malnutrition Status -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textColor="@android:color/white"
                        android:layout_marginEnd="16dp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:id="@+id/malnutrition_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Malnutrition Status: None"
                        android:textColor="@android:color/white"
                        android:layout_marginEnd="16dp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Edit Profile Card -->
    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="30dp"
            android:padding="16dp"
            android:gravity="center_vertical"
            >

            <TextView
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="EDIT PROFILE"/>

            <Button
                android:id="@+id/edit_profile_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ENTER"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Add Profile Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="30dp"
        android:padding="16dp"
        android:gravity="center_vertical">

            <TextView
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ADD PROFILE"/>

            <Button
                android:id="@+id/add_profile_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ENTER"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Delete Profile Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="30dp"
            android:padding="16dp"
            android:gravity="center_vertical">

            <TextView
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="SELECT PROFILE"/>

            <Button
                android:id="@+id/select_profile_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ENTER"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>

